fix cannot open search results on ios

--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -453,7 +453,7 @@ ul.posts {
     position: relative;
   }
 
-  &:hover {
+  /*&:hover {
     cursor: text;
 
     i {
@@ -463,9 +463,11 @@ ul.posts {
     input {
       color: #000;
     }
-  }
+  }*/
 
-  &:focus-within {
+  &:focus-within,
+  &:hover {
+    cursor: text;
 
     .search-section {
       border-radius: 5px;
